# final-nn

./: README.md  autoencoder.ipynb  classifier.ipynb  pyproject.toml
.github/workflows/: pytest.yml
nn/: nn.py  preprocess.py
test/: test_nn.py
