[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.7'"
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "neuralnetwork"
authors = [{name = "David Gomez Siu", email = "david.gomezsiu@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest","matplotlib", "numpy", "scipy", "scikit-learn"
]

[project.urls]
Home = "https://github.com/dgomezsiu/final-nn.git"